# kductor

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  org.kde.kductor.desktop  org.kde.kductor.metainfo.xml  org.kde.kductor.notifyrc
.github/workflows/: ci.yml
scripts/: build.sh  install.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/core/: agentmanager.cpp  agentmanager.h  agentoutputmodel.cpp  agentoutputmodel.h  agentprocess.cpp  agentprocess.h  gitmanager.cpp  gitmanager.h  workspace.cpp  workspace.h  workspacemodel.cpp  workspacemodel.h  worktreemanager.cpp  worktreemanager.h
src/ui/: AboutPage.qml  AgentPanel.qml  DashboardPage.qml  DiffViewerPage.qml  Main.qml  RepoOverviewPage.qml  SettingsPage.qml  WorkspaceCreateSheet.qml  WorkspacePage.qml
src/ui/components/: AgentStatusCard.qml  CommandBar.qml  CopyButton.qml  StatusBadge.qml  StreamingTextArea.qml  WorkspaceCard.qml
tests/: CMakeLists.txt  agentmanagertest.cpp  agentoutputmodeltest.cpp  agentprocesstest.cpp  gitmanagertest.cpp  workspacemodeltest.cpp  workspacetest.cpp  worktreemanagertest.cpp
